# witboost-google-dataproc-pyspark-workload-template

./: .gitignore  README.md  edit-template.yaml  mkdocs.yaml  template.yaml
docs/: index.md
policies/: dataproc-pyspark-workload.cue
skeleton/: .gitlab-ci.yml  README.md  catalog-info.yaml  mkdocs.yaml  parameters.yaml
skeleton/artifacts/: .gitignore  pyproject.toml
skeleton/artifacts/src/: README.md
skeleton/artifacts/src/spark_app/: main.py
skeleton/docs/: index.md
